# circom

./: 404.html  Cargo.toml  index.html  sitemap.xml
background/background/: index.html
circom-language/anonymous-components-and-tuples/: index.html
circom-language/basic-operators/: index.html
circom-language/comment-lines/: index.html
circom-language/constraint-generation/: index.html
circom-language/control-flow/: index.html
circom-language/custom-templates-snarkjs/: index.html
circom-language/data-types/: index.html
circom-language/functions/: index.html
circom-language/identifiers/: index.html
circom-language/include/: index.html
circom-language/pragma/: index.html
circom-language/reserved-keywords/: index.html
circom-language/scoping/: index.html
circom-language/signals/: index.html
circom-language/tags/: index.html
circom-language/templates-and-components/: index.html
circom-language/the-main-component/: index.html
circom-language/variables-and-mutability/: index.html
circom_wasm/: Cargo.toml
circom_wasm/src/: compilation_wasm.rs  constraints_wasm.rs  constraints_writer_wasm.rs  error_reporting_wasm.rs  execution_wasm.rs  include_logic_wasm.rs  lib.rs  log_writer_wasm.rs  parser_wasm.rs  r1cs_porting_wasm.rs  r1cs_writer_wasm.rs  type_analysis_wasm.rs
constraint_generation/src/: lib.rs
constraint_list/src/: constraint_simplification.rs  lib.rs  r1cs_porting.rs
constraint_writers/src/: lib.rs  r1cs_writer.rs
dag/src/: lib.rs  map_to_constraint_list.rs
downloads/downloads/: index.html
search/: search_index.json
(+20 files in other folders)
