[package]
name = "circom_wasm"
version = "2.1.7"
authors = ["Costa Group UCM","iden3"]
edition = "2018"

description = "circom is a zkSnark circuit compiler"
homepage = "https://iden3.io/circom"
documentation = "https://docs.circom.io"
repository = "https://github.com/iden3/circom"
readme = "README.md"
keywords = ["zkproofs", "zksanrks","circuits","compiler"]
categories = ["compilers"]

[build-dependencies]
lalrpop = { version = "0.19.9", features = ["lexer"] }

[dependencies]
parser = {path = "../parser"}
program_structure = { path = "../program_structure" }
type_analysis = { path = "../type_analysis" }
constraint_generation = { path = "../constraint_generation" }
constraint_writers = { path = "../constraint_writers" }
compiler = { path = "../compiler" }
dag = { path = "../dag" }
constraint_list = { path = "../constraint_list" }
circom_algebra = { path = "../circom_algebra" }
code_producers = { path = "../code_producers" }
clap = "2.33.0"
ansi_term = "0.12.1"
wast = "39.0.0"
exitcode = "1.1.2"
wasm-bindgen = "0.2.63"
js-sys = "0.3"
codespan-reporting = "0.9.0"
lalrpop-util = "0.19.9"

[lib]
crate-type = ["cdylib", "rlib"]
